# m_viewer

./: PORTFOLIO_PROJECT_PLAN_KR.md  README.md  package-lock.json  package.json
backend/: dev-server.cjs
cpp-core/: CMakeLists.txt  build.ps1
cpp-core/cli/: main.cpp
cpp-core/include/: BoundingBox.h  Mesh.h  STLLoader.h  Vector3.h
cpp-core/include/analysis/: MeshAnalysisResult.h  MeshAnalyzer.h
cpp-core/include/core/math/: AABB.h  Vector3.h
cpp-core/include/geometry/: Mesh.h
cpp-core/include/io/: STLLoader.h
cpp-core/include/physics/raycast/: MeshRaycaster.h  Ray.h  RaycastHit.h
cpp-core/include/wasm/: WasmExports.h
cpp-core/src/: BoundingBox.cpp  Mesh.cpp  STLLoader.cpp  main.cpp
cpp-core/src/analysis/: MeshAnalyzer.cpp
cpp-core/src/core/math/: AABB.cpp
cpp-core/src/geometry/: Mesh.cpp
cpp-core/src/io/: STLLoader.cpp
cpp-core/src/physics/raycast/: MeshRaycaster.cpp
cpp-core/src/wasm/: WasmExports.cpp
cpp-core/tests/: raycast_smoke.cpp
docs/: CPP_CORE_API_DRAFT.md  CPP_CORE_REQUIREMENTS.md  DOCS_GUIDE.md  FEATURES.md  FEATURE_POLICIES.md  PROJECT_STRUCTURE.md  VIEWER_MVP_CHECKLIST.md  WASM_MIGRATION_PLAN.md  WEB_VIEWER_STATUS.md
scripts/: dev.cjs
web-viewer/: index.html  vite.config.mts
web-viewer/public/samples/: cube_ascii.stl
web-viewer/src/: App.tsx  parsers.ts  styles.css  viewer.ts
web-viewer/src/app/: App.tsx  parsers.ts
web-viewer/src/formats/: loadGeometryDocument.ts
web-viewer/src/models/: geometry.ts
web-viewer/src/modes/: InspectModeController.ts  MeasureModeController.ts  ModeController.ts  (+1 more)
(+8 files in other folders)
